fix: updated `.react-datepicker-popper` z-index to accomodate for google maps and other things on screen

--- a/packages/event-builder/src/styles/datepicker/styles.scss
+++ b/packages/event-builder/src/styles/datepicker/styles.scss
@@ -7,7 +7,7 @@
 }
 
 .react-datepicker-popper {
-  z-index: 2;
+  z-index: 3;
 }
 
 .react-datepicker {
